@@ -1,5 +1,6 @@
 Version 1.0.7
 	Fixed NexusMods login failing, if user didn't have profile picture set.
+	Changed how NexusMods login is being handled, if CoolUpdater couldn't start a web browser
 
 Version 1.0.6
 	Fixed UI scaling on ultrawide resolutions.
